Feat: Get user's monsters when fetching user profile
